[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/ui/menu/InventoryItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/menu/TabItems.gd" type="Script" id=2]
[ext_resource path="res://tres/default_theme.tres" type="Theme" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.196078 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 16.0
content_margin_bottom = 16.0
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[node name="TabItems" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 449.0
margin_top = 166.0
margin_right = -368.0
margin_bottom = -182.0
theme = ExtResource( 6 )
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
script = ExtResource( 2 )

[node name="ScrollC" type="ScrollContainer" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 447.0
margin_bottom = 356.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridC" type="GridContainer" parent="ScrollC"]
margin_right = 431.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 32
custom_constants/hseparation = 32
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryItem1" parent="ScrollC/GridC" instance=ExtResource( 1 )]
margin_left = 18.0
margin_right = 82.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="InventoryItem2" parent="ScrollC/GridC" instance=ExtResource( 1 )]
margin_left = 150.0
margin_right = 214.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="InfoPanel" type="Panel" parent="."]
visible = false
margin_left = 16.0
margin_top = 16.0
margin_right = 447.0
margin_bottom = 356.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hide" type="Button" parent="InfoPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="RichTextLabel" parent="InfoPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.5
margin_top = -130.0
margin_right = -3.5
margin_bottom = -2.0
rect_min_size = Vector2( 256, 256 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "Example"
text = "Example"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="InfoPanel/Hide" to="." method="_on_DescButton_pressed"]
